Implementar consulta de dominis + cache distribuïda
